# UnslothLab

./: .gitignore  README.md  pyproject.toml
TritonNotebooks/: 01-vector-add.ipynb  A_Practitioners_Guide_to_Triton.ipynb  README.MD  triton_util.py
docs/superpowers/plans/: 2026-04-16-unsloth-under-the-hood.md
docs/superpowers/specs/: 2026-04-16-unsloth-under-the-hood-design.md
notebooks/: 01-the-speedup-is-real.ipynb  02-gpu-memory-hierarchy.ipynb  03-triton-fundamentals.ipynb  04-flash-attention.ipynb  05-rope-embedding-kernels.ipynb  06-cross-entropy-logits.ipynb  07-lora-under-the-hood.ipynb  08-quantization-dequant-kernels.ipynb  09-monkey-patching-system.ipynb  10-training-loop.ipynb  11-full-ablation-study.ipynb  12-contributing-add-a-new-model.ipynb
tests/: test_benchmark.py
utils/: benchmark.py  plotting.py
