[project]
name = "unsloth-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.6",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.29.0",
    "datasets>=2.18.0",
    "jupyterlab>=4.1.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "nvitop>=1.3.0",
    "pytest>=8.0.0",
    "triton>=3.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
